--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,4 @@
-<!--
-/*!
 
-=========================================================
-* Black Dashboard React v1.2.1
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/black-dashboard-react
-* Copyright 2022 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/black-dashboard-react/blob/master/LICENSE.md)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-*/
--->
 <!DOCTYPE html>
 <html lang="en" class="perfect-scrollbar-off">
   <head>
@@ -42,21 +24,12 @@
       sizes="76x76"
       href="%PUBLIC_URL%/apple-icon.png"
     />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <!--     Fonts and icons     -->
+    
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
       rel="stylesheet"
     />
-    <title>Black Dashboard React by Creative Tim</title>
+    <title>Baladiti Dashboard</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   </head>
   <body>
